syntax = "proto3";
package rank;
option go_package = "/proto";

// 新增/更新 玩家分数
message UpdatePlayerRankInfoReq
{
  int64 roleid = 1;
  int32 score  = 2;
}

message UpdatePlayerRankInfoRes
{
  int32 RetCode  = 1;
}

//玩家信息
message PlayerInfo
{
	int64 roleid   = 1;
  	int32 score    = 2;
  	int32 rank     = 3;
}


// 查询玩家分数
message QueryPlayerScoreReq
{
  int64 roleid = 1;
}
message QueryPlayerScoreRes
{
  PlayerInfo info   = 1;
  int32 RetCode  	= 2;
}

// 查询玩家排名
message QueryPlayerRankReq
{
  int64 roleid = 1;
}
message QueryPlayerRankRes
{
  PlayerInfo info   = 1;
  int32 RetCode  	= 2;
}

// 查询前五玩家
message QueryTop5RankReq
{}
message QueryTop5RankRes
{
  repeated PlayerInfo info = 1;
  int32 RetCode 		= 2;
}

// 从榜上删除玩家数据
message DeletePlayerRankReq
{
	int64 roleid = 1;
}
message DeletePlayerRankRes
{
  int32 RetCode 	= 1;
}

// 清空排行榜数据
message ClearRankInofReq
{}
message ClearRankInofRes
{
  int32 RetCode 	= 1;
}